@@ -1,6 +1,6 @@
 package org.lab_task_1;
 
-import org.lab_task_1.human.Human;
+import org.human.Human;
 import org.lab_task_1.student.Student;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
@@ -15,20 +15,20 @@ import static org.testng.AssertJUnit.assertNotSame;
 public class ListDemoTest {
     @Test(dataProvider = "getNamesakesList_Data")
     public static void getNamesakesList_Test(
-        List<Human> humans,
-        Human person,
-        List<Human> expectedList
+        final List<Human> humans,
+        final Human person,
+        final List<Human> expectedList
     ) {
-        List<Human> actualList = getNamesakesList(humans, person);
+        final List<Human> actualList = getNamesakesList(humans, person);
         assertEquals(actualList, expectedList);
     }
 
     @DataProvider
     public static Object[][] getNamesakesList_Data() {
-        List<Human> humanList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
-        List<Human> expectedList1 = List.of(personLucyVirth, personJulieVirth);
-        List<Human> expectedList2 = List.of(personAlexandreMerson);
-        List<Human> emptyList = new ArrayList<>(0);
+        final List<Human> humanList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        final List<Human> expectedList1 = List.of(personLucyVirth, personJulieVirth);
+        final List<Human> expectedList2 = List.of(personAlexandreMerson);
+        final List<Human> emptyList = new ArrayList<>(0);
 
         return new Object[][] {
             { humanList, personCyrillVirth, expectedList1 },
@@ -49,20 +49,21 @@ public class ListDemoTest {
         final Human person,
         final List<Human> expectedList
     ) {
-        List<Human> actualList = getIndependentListWithoutGivenPerson(people, person);
+        final List<Human> actualList = getIndependentListWithoutGivenPerson(people, person);
         assertEquals(actualList, expectedList);
         assertNotSame(
-            people.get(people.indexOf(personLucyBrown)), actualList.get(actualList.indexOf(personLucyBrown)));
+            people.get(people.indexOf(personLucyBrown)), actualList.get(actualList.indexOf(personLucyBrown))
+        );
     }
 
     @DataProvider
     public static Object[][] getIndependentListWithoutGivenPerson_PositiveCase_Data() {
-        List<Human> initialList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
-        List<Human> initialListWithNull = Arrays.asList(personLucyEarl, null, personAlexandreMerson, personJulieVirth, personLucyBrown);
-        List<Human> expectedList1 = List.of(personLucyEarl, personLucyVirth, personJulieVirth, personLucyBrown);
-        List<Human> expectedList1WithNull = Arrays.asList(personLucyEarl, null, personJulieVirth, personLucyBrown);
-        List<Human> expectedList2 = List.of(personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
-        List<Human> expectedList2WithNull = Arrays.asList(null, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        final List<Human> initialList = List.of(personLucyEarl, personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        final List<Human> initialListWithNull = Arrays.asList(personLucyEarl, null, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        final List<Human> expectedList1 = List.of(personLucyEarl, personLucyVirth, personJulieVirth, personLucyBrown);
+        final List<Human> expectedList1WithNull = Arrays.asList(personLucyEarl, null, personJulieVirth, personLucyBrown);
+        final List<Human> expectedList2 = List.of(personLucyVirth, personAlexandreMerson, personJulieVirth, personLucyBrown);
+        final List<Human> expectedList2WithNull = Arrays.asList(null, personAlexandreMerson, personJulieVirth, personLucyBrown);
 
         return new Object[][] {
             { initialList, personAlexandreMerson, expectedList1 },
@@ -76,9 +77,9 @@ public class ListDemoTest {
 
     @Test(dataProvider = "getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Data")
     public static void getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Test(
-        List<Set<Integer>> setList,
-        Set<Integer> givenSet,
-        List<Set<Integer>> expectedList
+        final List<Set<Integer>> setList,
+        final Set<Integer> givenSet,
+        final List<Set<Integer>> expectedList
     ) {
         List<Set<Integer>> actualList = getListOfSetsHavingEmptyIntersectionWithGivenSet(setList, givenSet);
         assertEquals(actualList, expectedList);
@@ -86,24 +87,24 @@ public class ListDemoTest {
 
     @DataProvider
     public static Object[][] getListOfSetsHavingEmptyIntersectionWithGivenSet_PositiveCase_Data() {
-        Set<Integer> emptySet = new TreeSet<>();
-        Set<Integer> setA = new TreeSet<>(List.of(1, 2, 3));
-        Set<Integer> setB = new TreeSet<>(List.of(4, 5, 6));
-        Set<Integer> setC = new TreeSet<>(List.of(-1, 10, 7));
+        final Set<Integer> emptySet = new TreeSet<>();
+        final Set<Integer> setA = new TreeSet<>(List.of(1, 2, 3));
+        final Set<Integer> setB = new TreeSet<>(List.of(4, 5, 6));
+        final Set<Integer> setC = new TreeSet<>(List.of(-1, 10, 7));
 
-        Set<Integer> setUnionBAndA = new TreeSet<>();
+        final Set<Integer> setUnionBAndA = new TreeSet<>();
         setUnionBAndA.addAll(setA);
         setUnionBAndA.addAll(setB);
 
-        Set<Integer> setUnionCAndA = new TreeSet<>();
+        final Set<Integer> setUnionCAndA = new TreeSet<>();
         setUnionCAndA.addAll(setA);
         setUnionCAndA.addAll(setC);
 
-        List<Set<Integer>> emptyList = new ArrayList<>(0);
-        List<Set<Integer>> listOfEmptySet = List.of(new TreeSet<>());
-        List<Set<Integer>> listOfGivenSetCopies = List.of(setA, setA, setA);
-        List<Set<Integer>> listOfSetsHavingEmptyIntersectionWithSetA = List.of(setB, setC, emptySet);
-        List<Set<Integer>> listContainsSetsThatIntersectsWithSetA = List.of(setB, setC, setUnionBAndA, setUnionCAndA, emptySet);
+        final List<Set<Integer>> emptyList = new ArrayList<>(0);
+        final List<Set<Integer>> listOfEmptySet = List.of(new TreeSet<>());
+        final List<Set<Integer>> listOfGivenSetCopies = List.of(setA, setA, setA);
+        final List<Set<Integer>> listOfSetsHavingEmptyIntersectionWithSetA = List.of(setB, setC, emptySet);
+        final List<Set<Integer>> listContainsSetsThatIntersectsWithSetA = List.of(setB, setC, setUnionBAndA, setUnionCAndA, emptySet);
 
         return new Object[][] {
             { emptyList, setA, emptyList },
@@ -130,37 +131,37 @@ public class ListDemoTest {
 
     @DataProvider
     public static Object[][] getSetOfOldestPeople_PositiveCase_Data() {
-        List<Human> peopleListWithOneOldestPerson = List.of(
+        final List<Human> peopleListWithOneOldestPerson = List.of(
             personLucyEarl, personAlexandreMerson, personCyrillVirth, personLucyBrown
         );
-        List<Human> peopleListWithOneOldestPersonAndNulls = Arrays.asList(
+        final List<Human> peopleListWithOneOldestPersonAndNulls = Arrays.asList(
             personLucyEarl, null, personAlexandreMerson, personCyrillVirth, null, personLucyBrown
         );
-        Set<Human> oldestPerson  = new TreeSet<>(List.of(personCyrillVirth));
+        final Set<Human> oldestPerson = Set.of(personCyrillVirth);
 
-        List<Student> studentsListWithOneOldestPerson = List.of(
+        final List<Student> studentsListWithOneOldestPerson = List.of(
             studentLucyEarl, studentAlexandreMerson, studentCyrillVirth, studentLucyBrown
         );
-        List<Student> studentsListWithOneOldestPersonAndNulls = Arrays.asList(
+        final List<Student> studentsListWithOneOldestPersonAndNulls = Arrays.asList(
             studentLucyEarl, null, studentAlexandreMerson, studentCyrillVirth, null, studentLucyBrown
         );
-        Set<Student> oldestStudent = new TreeSet<>(List.of(studentCyrillVirth));
+        final Set<Student> oldestStudent = Set.of(studentCyrillVirth);
 
-        List<Human> peopleListWithTwoOldestPeople = List.of(
+        final List<Human> peopleListWithTwoOldestPeople = List.of(
             personLucyEarl, personOlgaMerson, personAlexandreMerson, personCyrillVirth, personLucyBrown
         );
-        Set<Human>  twoOldestPeople = new TreeSet<>(List.of(personOlgaMerson, personCyrillVirth));
+        final Set<Human> twoOldestPeople = new TreeSet<>(List.of(personOlgaMerson, personCyrillVirth));
 
-        List<Student> studentsListWithTwoOldestStudents = List.of(
+        final List<Student> studentsListWithTwoOldestStudents = List.of(
             studentLucyEarl, studentOlgaMerson, studentAlexandreMerson, studentCyrillVirth, studentLucyBrown
         );
-        Set<Student>  twoOldestStudents = new TreeSet<>(List.of(studentOlgaMerson,studentCyrillVirth));
+        final Set<Student> twoOldestStudents = new TreeSet<>(List.of(studentOlgaMerson, studentCyrillVirth));
 
-        List<Human> peopleListWithSameAgePeople = List.of(
+        final List<Human> peopleListWithSameAgePeople = List.of(
             personLucyBrown, personLucyVirth, personLucyGreen
         );
-        List<Student> studentsListWithSameAgeStudents = List.of(
-            studentLucyBrown,  studentLucyVirth, studentLucyGreen
+        final List<Student> studentsListWithSameAgeStudents = List.of(
+            studentLucyBrown, studentLucyVirth, studentLucyGreen
         );
 
         return new Object[][] {
